allgemeines Feld wird hinzugefügt.